--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-        <form id="destination_details_form">
+        <form id="destinations_details_form">
 
             <label for="name">Enter Destination name: </label>
             <input type="text" id="name"  placeholder="Enter name of destination"   required />
@@ -40,7 +40,15 @@
         <article>
             <h2 id="title">Enter destination details</h2>
             <div id="destinations_container">
-                    
+                    <div class="card">
+                        <img src="./images/signpost.jpg">
+                        <div class="card-body">
+                            <h3>Destination Name</h3>
+                            <h4>Destination Location</h4>
+                            <p class="card-text">Destination description</p>
+                            <button>Remove</button>
+                        </div>
+                    </div>
             </div>
         </article>
     </main>
